changes to the display of a full card to ensure a user cannot just go to that route in order to claim a discount that they are not entitled too

--- a/views/full-card.ejs
+++ b/views/full-card.ejs
@@ -54,8 +54,8 @@
         <div class="btn-group">
 
             <div>
-                <form action="../card/" method="post">
-                    <button type="submit">ADD ONE</button>
+                <form action="../card/use" method="post">
+                    <button type="submit">USE CARD</button>
                 </form>
             </div>
 
