--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,5 +14,7 @@
         <input type="password" id="password" name="password">
         <button>SUBMIT</button>
     </form>
+
+    <p><a href="../user/register">Register Account</a></p>
 </body>
 </html>
