--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,9 @@
 </head>
 <body>
     <form action="./register" method="post">
-        <input type="text" id="name" name="username">
+        <input type="text" id="name" name="name">
+        <input type="text" id="surname" name="surname">
+        <input type="text" id="username" name="username">
         <input type="password" name="password" id="password">
         <button>SUBMIT</button>
     </form>
